--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "css-loader": "^2.1.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mint-ui": "^2.2.13",
@@ -41,5 +41,10 @@
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.0"
+  },
+  "dependencies": {
+    "fstream": "^1.0.12",
+    "lodash": "^4.17.15",
+    "tar": "^4.4.10"
   }
 }
