使用vs code的GIT工具commit修改文件

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "fstream": "^1.0.12",
     "lodash": "^4.17.15",
+    "lodash.mergewith": "^4.6.2",
     "tar": "^4.4.10"
   }
 }
