--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
-  "name": "01.webpack-study",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3006 --hot --host 127.0.0.1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-component": "^0.10.1",
-    "babel-plugin-transform-remove-strict-mode": "^0.0.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^13.3.0",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
-  },
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "mint-ui": "^2.2.9",
-    "moment": "^2.19.1",
-    "vue": "^2.5.2",
-    "vue-preview": "^1.1.3",
-    "vue-resource": "^1.3.4",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
-  }
+    "name": "webpackstudy",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "webpack-dev-server --inline --mode development"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@babel/core": "^7.3.3",
+        "@babel/preset-env": "^7.3.1",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^7.1.5",
+        "babel-plugin-component": "^1.1.1",
+        "babel-plugin-transform-remove-strict-mode": "0.0.2",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-stage-0": "^6.24.1",
+        "bootstrap": "^3.4.1",
+        "css-loader": "^2.1.0",
+        "file-loader": "^3.0.1",
+        "html-webpack-plugin": "^3.2.0",
+        "jquery": "^3.3.1",
+        "less": "^3.9.0",
+        "less-loader": "^4.1.0",
+        "mint-ui": "^2.2.13",
+        "moment": "^2.24.0",
+        "node-sass": "^4.11.0",
+        "popper.js": "^1.14.7",
+        "sass-loader": "^7.1.0",
+        "scss": "^0.2.4",
+        "scss-loader": "0.0.1",
+        "style-loader": "^0.23.1",
+        "url-loader": "^1.1.2",
+        "vue": "^2.6.7",
+        "vue-loader": "^15.6.4",
+        "vue-preview": "^1.1.3",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^3.0.2",
+        "vue-template-compiler": "^2.6.7",
+        "webpack": "^4.29.5",
+        "webpack-cli": "^3.2.3",
+        "webpack-dev-server": "^3.2.0"
+    },
+    "dependencies": {
+        "vuex": "^3.1.0"
+    }
 }
