--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "css-loader": "^2.1.0",
         "file-loader": "^3.0.1",
         "html-webpack-plugin": "^3.2.0",
-        "jquery": "^3.3.1",
+        "jquery": "^3.4.1",
         "less": "^3.9.0",
         "less-loader": "^4.1.0",
         "mint-ui": "^2.2.13",
@@ -47,6 +47,10 @@
         "webpack-dev-server": "^3.2.0"
     },
     "dependencies": {
+        "fstream": "^1.0.12",
+        "lodash": "^4.17.15",
+        "lodash.mergewith": "^4.6.2",
+        "tar": "^4.4.10",
         "vuex": "^3.1.0"
     }
 }
